<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.allias.ui.ActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_text_get_ready"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/get_ready_to"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_text_guess_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/guess_the_word"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintTop_toBottomOf="@+id/title_text_get_ready" />

        <Spinner
            android:id="@+id/spin_lang"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:paddingLeft="8dp"
            android:popupBackground="@android:color/white"
            android:scrollbars="none"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text_guess_word"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/title_button_go"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/dark_pink"
            android:enabled="@{viewModel.letsGoButtonVisible}"
            android:text="@string/let_s_go"
            android:textSize="16sp"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>