<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/game">

        <TextView
            android:id="@+id/game_text_next_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/the_word_is"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintTop_toBottomOf="@+id/game_text_next_word" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="00:00"
            android:layout_marginTop="200dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/word" />


        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="0"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/timer"
            android:layout_margin="8dp"/>


        <Button
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="@string/skip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="32dp"
            android:textSize="16sp"
            android:backgroundTint="@color/red" />

        <Button
            android:id="@+id/got_it"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="@string/got_it"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="32dp"
            android:textSize="16sp"
            android:backgroundTint="@color/green" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>