<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_color">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/final_bookmark"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/ic_see_history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/score_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent">

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/party_popper" />

            <TextView
                android:id="@+id/final_text_your_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:gravity="center"
                android:text="@string/your_score"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent" />

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/party_popper"
                android:scaleX="-1" />

        </LinearLayout>

        <TextView
            android:id="@+id/final_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/noto_sans_bold"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintTop_toBottomOf="@+id/score_linear_layout"
            tools:layout_editor_absoluteX="8dp" />

        <TextView
            android:id="@+id/final_text_total_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:fontFamily="@font/noto_sans"
            android:gravity="center"
            android:text="@string/total_score"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/total_score" />

        <TextView
            android:id="@+id/total_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/noto_sans_bold"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/final_play_again" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/final_play_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_play_again_button"
            android:elevation="10dp"
            android:fontFamily="@font/noto_sans"
            android:gravity="center"
            android:text="@string/play_again"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>